@@ -1,0 +1,9 @@
+.gwdir
+*.swp
+*~
+*.app
+*.bundle
+*.framework
+*obj
+derived_src
+ProjectCenter
